# VQR

./: .gitignore  README.md  pyproject.toml  viqr.py  vqr.py
